# ncrew

./: -tree -r HEAD --name-only | grep base.html  .env.example  .gitignore  AGENTS.md  CLASS_DESIGNS.md  DELTA_TRACKING_FIXES.md  DOCS_ALIGNMENT_NOTES.md  DOCS_ALIGNMENT_REPORT.md  DOCS_RECOMMENDATIONS.md  IMPLEMENTATION_EXAMPLE.md  IMPLEMENTATION_SUMMARY.md  INTERFACE_AGNOSTIC_DESIGN.md  MULTIPROJECT_ARCHITECTURE.md  MVP_DEPLOYMENT_SUMMARY.md  PROJECT_CONFIG_MIGRATION.md  README.md  README_SIDEBAR_UI.md  REVIEW_SUMMARY.md  TELEGRAM_MARKDOWN_AUDIT.md  WEB_CHAT_README.md  config.py  h  main.py  main_mvp.py  main_new.py  ncrew.py  ncrew.sh  ncrew_cli.py  package.json  playwright.e2e.config.js  pyproject.toml  repomix-output.xml  requirements.txt  setup_server.py  telegram_bot.py  test_start_integration.py  web_server.py
.serena/: project.yml
app/: application.py  config.py  config_manager.py
backend/: package.json  server.js
connectors/: __init__.py  anthropic_sdk_connector.py  base.py  base_sdk_connector.py  claude_cli_connector.py  codex_cli_connector.py  gemini_acp_connector.py  openai_sdk_connector.py  opencode_acp_connector.py  qwen_acp_connector.py
docs/: ARCHITECTURE.md  CONNECTORS.md  Enhanced_ACP_Guide.md  FILE_STORAGE.md  PROJECT_INDEX.md  README.md  SETUP_AND_DEPLOYMENT.md  TECH_SPEC.md  TELEGRAM_BOT.md  TESTING.md  USER_STORIES.md  WEB_SERVER.md  api.md  architecture.md  development.md  e2e-tests.md  installation.md  playwright-mcp.md  user-guide.md  user-stories.md
examples/: settings.sample.json
frontend/: index.html  package.json  vite.config.js
(+180 files in other folders)
